--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,12 @@ body
     color: #fff;
 }
 /*End Navbar*/
+/* @media only screen and (max-width: 600px) {
+    .hederBottomItem  {
+      width: 50% !important;
+      background-color: #1ABC9C;
+    }
+  } */
 
 /*Start Section2*/
 .section2-text h3
@@ -237,7 +243,7 @@ footer
 
 @media only screen and (max-width: 600px) {
     footer {
-      height: 140vh;
+      height: 95vh;
     }
   }
 
