--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-/* .backgron
-{
-    background-color: #ff6057;
-    width: 55%;
-    height: 60vh;
-    border-bottom-right-radius: 40%;
-} */
 *
 {
     padding: 0;
@@ -15,7 +8,14 @@ body
 {
     font-family:"Poppins-SemiBold, Poppins";
 }
-
+.grayColorPrag
+{
+    color: rgba(143,143,143,1);
+}
+.ColorHeading
+{
+    color: rgba(59,58,58,1);
+}
 .min-color
 {
     color: #ff6057;
@@ -48,7 +48,23 @@ body
 {
     border-radius: 10px;
 }
-
+#header .btn
+{
+    font-weight: bold !important;
+    font-size: 16px !important;
+    padding: 0.3rem 1rem;
+    border-radius: 10px;
+}
+@media only screen and (max-width: 600px) {
+    .header-left  {
+      padding-top: 0.5rem !important;
+      
+    }
+    #header {
+        padding-bottom: 0% !important;
+        margin-bottom: 0% !important;
+    }
+  }
 /*End Header*/
 
 /*Start Navbar*/
@@ -65,32 +81,34 @@ body
 .navbar li a
 {
     color: #fff !important;
-    /* font-size: 1.1rem !important; */
 }
 .navbar-brand 
 {
-    font-size: 2rem !important;
+    font-size: 2.3rem !important;
     color: #fff !important;
     font-weight: 600 !important;
 }
 .btn-nav
 {
-    background-color: #ff6057;
-    /* background-color: #7c1c80; */
-    color: #fff;
+   border-radius: 9px !important;
+   padding: 0.3rem 2rem;
 }
 /*End Navbar*/
-/* @media only screen and (max-width: 600px) {
-    .hederBottomItem  {
-      width: 50% !important;
-      background-color: #1ABC9C;
-    }
-  } */
+
+.hederBottomItem
+{
+    padding: 0;
+}
 
 /*Start Section2*/
 .section2-text h3
 {
     cursor: pointer;
+}
+.section2-text h2
+{
+    font-weight: bold;
+    font-size: 38px;
 }
 .section2-text h2::before
 {
@@ -126,33 +144,50 @@ body
     left: 0;
     background-color: #ff6057;
 }
-.fi-brands-bootstrap
+.scale
 {
-    /* font-size: 1.2rem; */
-    background-color: #1ABC9C;
-    color: #fff;
+    background-color: rgba(241,41,30,1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
 }
-.fi-rr-briefcase
+.bootstrap
 {
-    color: #fff;
-    /* background-color: green; */
-    padding: 1rem;
-    font-size: 2rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    background-color: rgba(54,197,173,1);
+}
+.section2-icons .certification
+{
+    border-radius: 50%;
+    background-color: rgb(86, 230, 91);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+}
+.quality
+{
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    background-color: rgba(203,75,248,1) ;
 }
 /*End Section2*/
 
 
 /*Start Section3*/
-/* .section3 .section3-img
-{
-    background-image: url(../images/Rectangle\ 11.png);
-    background-position: center center;
-    background-size: cover;
-} */
-.section3-img img
-{
-    border-radius: 10px;
-}
 .section3-contnt h3
 {
     cursor: pointer;
@@ -161,6 +196,11 @@ body
 .section3-contnt h3:hover
 {
     transform: translateX(15px);
+}
+.section3-contnt h2
+{
+    font-weight: bold;
+    font-size: 38px;
 }
 .section3-contnt h2::before
 {
@@ -172,23 +212,127 @@ body
     top: -10%;
     background-color: #ff6057;
 }
+@media only screen and (max-width: 600px) {
+    .section3 {
+      padding-bottom: 0 !important;
+    }
+    .section3-contnt {
+        padding-left: 0.3rem !important;
+    }
+  }
 /*End Section3*/
+/*Start Section4*/
 .skitter .info_slide_dots .image_number
 {
     background-color: #ff6057;
 }
+#section4 h4
+{
+    font-size: 28px;
+}
+#section4 h2
+{
+    font-size: 60px;
+}
+#section4 p
+{
+    line-height: 25px;
+}
+@media only screen and (max-width: 600px) {
+    #section4 {
+      padding-top: 0 !important;
+    }
+  }
+/*End Section4*/
 
-
-/* #section6 span::after
+/*Start section5*/
+.section5-contnt h3
+{
+    cursor: pointer;
+    transition: all 1s;
+}
+.section5-contnt h3:hover
+{
+    transform: translateX(15px);
+}
+.section5-contnt h2
+{
+    font-weight: bold;
+    font-size: 38px;
+}
+.section5-contnt h2::before
 {
     content: "";
+    width: 5rem;
+    height: 3px;
     position: absolute;
-    bottom: 0;
-    right: 40%;
+    left: 00%;
+    top: -10%;
     background-color: #ff6057;
-    width: 1px;
-    height: 30px;
-} */
+}
+@media only screen and (max-width: 600px) {
+    .section5-contnt {
+      padding-left: 0.3rem !important;
+    }
+  }
+/*End Section5*/
+
+/*Start Section6*/
+.section6-left h2
+{
+    font-weight: bold;
+    font-size: 38px;
+    line-height: 49px;
+}
+.section6-left .btn
+{
+    border-radius: 20px;
+    padding: 0 2.4rem;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 60px;
+}
+.section6-right h3
+{
+    font-weight: bold;
+    font-size: 24px;
+    padding-left: 1rem;
+}
+.section6-right p
+{
+    padding-left: 1rem;
+    padding-top: 1rem;
+}
+.section6-right .spa
+{
+    font-weight: bold;
+    font-size: 24px;
+    padding: 1rem !important;
+    position: relative;
+    width: 3rem !important;
+    height: 3rem !important;
+}
+.section6-right .spa::after
+{
+    content: "";
+    background-color: rgba(188,188,188,1);
+    width: 3px;
+    height: 4rem;
+    position: absolute;
+    top: 120%;
+    left: 50%;
+}
+@media only screen and (max-width: 600px) {
+    .section6-right .spa::after {
+        position: absolute;
+        top:50%;
+        left: 120%;
+        width: 6rem;
+        height: 3px;
+    }
+  }
+/*End Section6*/
+
 /*Start Section7*/
 .section7-contnt
 {
@@ -198,6 +342,18 @@ body
 {
     transform: translateY(-30px);
 }
+.section7-contnt h2
+{
+    font-weight: bold;
+    font-size: 46px;
+}
+.section7-contnt h6
+{
+    font-weight: bold;
+    font-size: 20px;
+    color: rgba(59,58,58,1);
+}
+
 /*End Section7*/
 
 /*Start Section8*/
@@ -220,34 +376,67 @@ body
 {
     background-color: #ff6057 !important;
 }
-/* .carousel-indicators
+.carousel-indicators
 {
-    position: absolute;
-    right: 0;
-    bottom: -20%;
-    left: 0;
-    z-index: 15;
-} */
+    bottom: -10%;
+}
+@media only screen and (max-width: 600px) {
+    #section8 .carousel-indicators {
+        bottom: -5%;
+    }
+    #section8 .carousel-contnt {
+        text-align: center;
+    }
+  }
+.section8-left .btn
+  {
+      border-radius: 20px;
+      padding: 0 2.4rem;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 60px;
+  }
+
 .carousel-item img
 {
     width: 150px !important;
 }
+@media only screen and (max-width: 600px) {
+    .section8-left {
+      padding-top: 1.5rem !important;
+      padding-left: 0.5rem !important;
+    }
+  }
 /*End Section8*/
 
 /*Start Footer*/
 footer
 {
-    background-color: #484b42;
-    height: 40vh;
+    background-color: rgba(51,51,51,1);
+    height: 50vh;
 }
 
 @media only screen and (max-width: 600px) {
     footer {
-      height: 95vh;
+      height: 110vh;
     }
   }
 
 
+.footer-item h2
+{
+    font-size: 48px;
+} 
+.footer-item p
+{
+    line-height: 28px;
+    font-size: 18px !important;
+} 
+.footer-item h6
+{
+    line-height: 25px;
+    font-size: 19px;
+}
 .btn1
 {
     position: relative;
